--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,3 +102,55 @@ input { /*override default styles*/
 .jb_gray:hover {
     background-color: var(--medium);
 }
+
+.leaderboard {
+    position: absolute;
+    z-index: 69420;
+    top: 10px;
+    right: 0px;
+    background: var(--light);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    text-align: left;
+    padding: 10px;
+    width: 200px;
+}
+
+.lb_header {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.lb_player {
+    margin-top: 10px;
+    background-color: #f1f1f1;
+    margin-left: -30px;
+    border-bottom-left-radius: 60px;
+    border-top-left-radius: 60px;
+    height: 70px;
+    position: relative;
+    width: 210%;
+}
+
+.lb_avatar-frame {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 5px solid #fc0320;
+    display: inline-block;
+}
+
+.lb_p_info {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.lb_p_name {
+    font-size: 20px;
+    font-weight: bold;
+}
