--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@ input { /*override default styles*/
     width: 900px;
     height: 500px;
     margin: auto;
+    top: 20px;
 }
 
 #mapsvg {
@@ -176,4 +177,60 @@ input { /*override default styles*/
 .lb_p_name {
     font-size: 20px;
     font-weight: bold;
+}
+
+.territorylabel {
+    position: absolute;
+    pointer-events: none;
+    width: 150px;
+    text-align: center;
+}
+
+.t_name {
+    color: var(--light);
+    font-weight: bold;
+    font-size: 15px;
+    -webkit-text-shadow: 0px 0px 7px rgba(0,0,0,0.5); 
+    text-shadow: 0px 0px 7px rgba(0,0,0,0.6);
+}
+
+.t_troops {
+    background-color: #8c8c8c;
+    border-radius: 50%;
+    padding: 9px;
+    width: 10px;
+    height: 10px;
+    margin: auto;
+    font-size: 17px;
+    color: var(--light);
+    border: 4px solid #474747;
+    -webkit-box-shadow: 0px 0px 6px 4px rgba(0,0,0,0.5), inset 0px 0px 3px 3px rgba(0,0,0,0.3); 
+    box-shadow: 0px 0px 6px 4px rgba(0,0,0,0.5), inset 0px 0px 3px 3px rgba(0,0,0,0.3);
+    z-index: 2000;
+}
+
+.attack-line {
+    background-size: 100% 100%;
+    overflow: hidden;
+}
+
+.attack-line::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--medium);
+    animation: animateline 1.2s ease infinite;
+}
+
+@keyframes animateline {
+    0% {
+        left: 0;
+    }
+
+    100% {
+        left: 100%;
+    }
 }
