--- a/public/css/style.css
+++ b/public/css/style.css
@@ -297,3 +297,56 @@ input { /*override default styles*/
     overflow: visible;
     cursor: pointer;
 }
+
+.globby_container {
+    margin: auto;
+    width: 500px;
+    margin-top: 30px;
+    padding: 10px;
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.4); 
+    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.4);
+}
+
+.gamelobby {
+    display: none;
+}
+
+.lobby_mapname {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.glb_player {
+    margin-top: 10px;
+    background-color: #f1f1f1;
+    border-bottom-left-radius: 60px;
+    border-top-left-radius: 60px;
+    height: 70px;
+    position: relative;
+    width: 100%;
+}
+
+.glb_avatar-frame {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 5px solid #fc0320;
+    display: inline-block;
+}
+
+.glb_p_info {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.glb_p_name {
+    font-size: 20px;
+    font-weight: bold;
+}
