add troop change animation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -265,6 +265,7 @@ input { /*override default styles*/
     left: 50%;
     transform: translate(-50%, 0%);
     display: none;
+    transition: 0.3s;
 }
 
 .attack-line {
