--- a/public/css/style.css
+++ b/public/css/style.css
@@ -412,15 +412,34 @@ input { /*override default styles*/
     font-weight: bold;
 }
 
-.playermessage {
+.infobar-main {
     position: fixed;
     z-index: 69420;
-    top: 20px;
+    top: -70px;
     font-size: 21px;
     color: var(--light);
     left: 50%;
     transform: translateX(-50%);
-    font-weight: bold;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: 0.4s;
+}
+
+.infobar-bg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    opacity: 0.7;
+    width: 100%;
+    background: var(--dark);
+    border-radius: 10px;
+    z-index: -1;
+}
+
+.ibmain-text {
+    padding: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .joinroom_area {
@@ -432,4 +451,43 @@ input { /*override default styles*/
     padding: 5px;
     font-size: 18px;
     border: 1px solid var(--dark);
+}
+
+.timer-bg {
+    width: 100%;
+    height: 10px;
+    background: var(--medium);
+}
+
+.timer-line {
+    position: relative;
+    height: 100%;
+    width: 0%;
+    background-size: 100% 100%;
+    overflow: hidden;
+    background: #05b50e;
+    transition: width 1s;
+    transition-timing-function: linear;
+}
+
+.timer-line::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(5,181,14);
+    background: linear-gradient(90deg, rgba(5,181,14,1) 0%, rgba(0,255,13,1) 50%, rgba(5,181,14,1) 100%);
+    animation: flashloadingline 2s ease infinite;
+}
+
+@keyframes flashloadingline {
+    0% {
+        left: -100%;
+    }
+
+    100% {
+        left: 100%;
+    }
 }
