--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,6 +143,7 @@ input { /*override default styles*/
     cursor: pointer;
     transition: 0.4s;
     border-radius: 10px;
+    margin: 5px;
 }
 
 .joinroomtext {
