--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1191,3 +1191,19 @@ input { /*override default styles*/
     color: var(--light);
     margin-top: -20px;
 }
+
+.nostyle-link {
+    color: var(--light);
+}
+
+.nostyle-link:visited {
+    color: var(--light);
+}
+
+.nostyle-link:hover {
+    color: var(--medium);
+}
+
+.nostyle-link:visited:hover {
+    color: var(--medium);
+}
