--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,10 +11,125 @@
     --green-darker: #00790a;
 }
 
+/*portrait mode mobile device*/
+@media (max-width: 520px) {
+    .troopscontrol {
+        width: 95% !important;
+    }
+
+    .troopslider {
+        width: calc(95% - 30px) !important;
+    }
+
+    .globby_container {
+        width: 100% !important;
+    }
+
+    .glb_player {
+        width: calc(100% - 20px) !important;
+    }
+}
+
+/*small screens*/
+@media (max-width: 700px) {
+    .troopscontrol {
+        left: calc(50% + 40px) !important;
+    }
+}
+
+@media (max-width: 620px) {
+    .t_avatar-frame {
+        width: 75px !important;
+        height: 75px !important;
+        margin-top: -5px !important;
+        margin-left: 0px !important;
+    }
+
+    .troopscontrolbg {
+        border-bottom-left-radius: 33px !important;
+        border-top-left-radius: 33px !important;
+    }
+
+    .tc-control-info {
+        margin-top: -78px !important;
+        margin-left: 90px !important;
+    }
+
+    .homemenu {
+        margin-left: -10px !important;
+    }
+}
+
+@media (max-width: 505px) {
+    .homemenu {
+        margin-left: -5px !important;
+        width: 100% !important;
+    }
+
+}
+
+@media (max-width: 435px) {
+    .selectedmapcontainer {
+        max-width: 280px !important;
+    }
+}
+
+@media (max-width: 474px) {
+    .joinprivateroom {
+        width: 180px !important;
+    }
+}
+
+@media (max-width: 490px) {
+    .leaderboard {
+        display: none;
+        z-index: 99999 !important;
+    }
+
+    .togglelb {
+        display: block !important;
+    }
+
+    .infobar-main {
+        font-size: 17px !important;
+    }
+
+    .mainlogoimg {
+        width: 340px !important;
+    }
+}
+
+@media (max-height: 415px) {
+    .s-territories-label, .s-territories-bar {
+        display: none !important;
+    }
+
+    .infobar-main {
+        font-size: 17px !important;
+    }
+}
+
+@media (max-width: 370px) {
+    .mainlogoimg {
+        width: 300px !important;
+    }
+}
+
+@media (max-width: 850px) {
+    .socials {
+        display: none;
+    }
+
+    .mobile-socials {
+        display: block !important;
+    }
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     overflow-x: hidden;
+    touch-action: none;
 }
 
 /* width */
@@ -77,6 +192,10 @@ input { /*override default styles*/
 
 #mapsvgbox {
     grid-area: 1/1;
+}
+
+.mobile-socials {
+    display: none;
 }
 
 .region-shadow-container {
@@ -609,14 +728,14 @@ input { /*override default styles*/
 }
 
 .homebackgroundcontainer {
-    position: absolute;
+    position: fixed;
     z-index: -2;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     background: #268cbb;
 }
@@ -1050,14 +1169,17 @@ input { /*override default styles*/
 
 .framecolorselect {
     display: inline-block;
-    padding: 7px;
-    padding-bottom: 8px;
+    padding: 8px;
+    padding-bottom: 9px;
     font-size: 18px;
     margin-left: -5px;
     border-top: 3px solid var(--medium);
     border-bottom: 3px solid var(--medium);
     border-right: 3px solid var(--medium);
     border-left: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .ji-area {
@@ -1070,7 +1192,7 @@ input { /*override default styles*/
 
 .gameversion {
     font-size: 18px;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     left: 10px;
     color: var(--light);
@@ -1184,6 +1306,37 @@ input { /*override default styles*/
     height: 60px;
     cursor: pointer;
     margin: 5px;
+}
+
+.togglelb {
+    position: fixed;
+    z-index: 99999;
+    top: 20px;
+    font-size: 25px;
+    color: var(--light);
+    right: 0;
+    overflow: hidden;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    padding: 5px;
+    text-align: center;
+    display: none;
+}
+
+#togglelb-inner {
+    padding: 5px;
+}
+
+.togglelb-bg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    opacity: 0.7;
+    width: 100%;
+    background: var(--dark);
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: -1;
 }
 
 .l-stats {
