fix client-side layering glitch

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1316,7 +1316,7 @@ input { /*override default styles*/
     padding: 10px;
     font-size: 18px;
     border-radius: 10px;
-    z-index: 6969;
+    z-index: 69696969;
     width: 300px;
     display: none;
 }
@@ -1645,7 +1645,7 @@ input { /*override default styles*/
 
 .gn-inner {
     margin-top: 30px;
-    max-height: calc(100vh - 150px);
+    max-height: calc(100vh - 230px);
     overflow: auto;
 }
 
